// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputPicker> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 24,
        "maxWidth": "100%",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "paddingLeft": 5,
          "paddingRight": 10,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": "auto",
          },
          false,
        ]
      }
    >
      <RCTPicker
        items={Array []}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<InputPicker> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 24,
        "maxWidth": "100%",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "paddingLeft": 5,
          "paddingRight": 10,
          "width": "100%",
        },
        false,
        Object {
          "backgroundColor": "#f4f4f4",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": "auto",
          },
          undefined,
        ]
      }
    >
      <RCTPicker
        items={Array []}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<InputPicker> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 24,
        "maxWidth": "100%",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "paddingLeft": 5,
          "paddingRight": 10,
          "width": "100%",
        },
        Object {
          "borderColor": "#d33c44",
        },
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": "auto",
          },
          false,
        ]
      }
    >
      <RCTPicker
        items={Array []}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<InputPicker> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 24,
        "maxWidth": "100%",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "paddingLeft": 5,
          "paddingRight": 10,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": "auto",
          },
          false,
        ]
      }
    >
      <RCTPicker
        items={Array []}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 12,
          "lineHeight": 16,
        },
        Object {
          "color": "#707070",
        },
        Object {
          "marginTop": 4,
          "maxWidth": "100%",
          "paddingLeft": 10,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<InputPicker> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 24,
        "maxWidth": "100%",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 14,
          "fontWeight": "600",
          "lineHeight": 16,
        },
        Object {
          "color": "#707070",
        },
        Object {
          "marginBottom": 6,
          "marginLeft": 10,
        },
      ]
    }
  >
    Hello World
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "paddingLeft": 5,
          "paddingRight": 10,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": "auto",
          },
          false,
        ]
      }
    >
      <RCTPicker
        items={Array []}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<InputPicker> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 24,
        "maxWidth": "100%",
        "overflow": "hidden",
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
        "width": 256,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "paddingLeft": 5,
          "paddingRight": 10,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": "auto",
          },
          false,
        ]
      }
    >
      <RCTPicker
        items={Array []}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<InputPicker> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 24,
        "maxWidth": "100%",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#cdd2d4",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "paddingLeft": 5,
          "paddingRight": 10,
          "width": "100%",
        },
        undefined,
        false,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
            "height": "auto",
          },
          false,
        ]
      }
    >
      <RCTPicker
        items={Array []}
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;
